--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
-JWT_SECRET=""
+PORT="3000"
+NODE_ENV="development"
+BASE_URL="http://localhost:3000"
+DATABASE_URL="postgresql://YOURUSER:YOURPASSWORD@770:randompassword@localhost:5432/YOURDATABASENAME?schema=public"
+JWT_SECRET="YOUR_SECRET"
